      information does not result in attempted GPG decryption operations.
      Hence this fix applies mostly to third party usage of libfko - i.e.
      stock installations of fwknopd are not affected.  As always, it is
      recommended to use HMAC authenticated encryption whenever possible even
      for GPG modes since this also provides a work around even for libfko
      prior to this fix.
    - [Android client] (Gerry Reno) Updated the Android client to be compatible
      with Android-4.4.
    - [server] Updated pcap_dispatch() default packet count from zero to 100.
      This change was made to ensure backwards compatibility with older
      versions of libpcap per the pcap_dispatch() man page, and also because
      some of a report from Les Aker of an unexpected crash on Arch Linux with
      libpcap-1.5.1 that is fixed by this change (closes #110).
    - [server] Bug fix for SPA NAT modes on iptables firewalls to ensure that
      custom fwknop chains are re-created if they get deleted out from under
      the running fwknopd instance.
    - [server] Added FORCE_SNAT to the access.conf file so that per-access
      stanza SNAT criteria can be specified for SPA access.
    - [test suite] added --gdb-test to allow a previously executed fwknop
      or fwknopd command to be sent through gdb with the same command line
      args as the test suite used.  This is for convenience to rapidly allow
      gdb to be launched when investigating fwknop/fwknopd problems.
    - [client] (Franck Joncourt) Added --stanza-list argument to show the
      stanza names from ~/.fwknoprc.
    - [libfko] (Hank Leininger) Contributed a patch to greatly extend libfko
      error code descriptions at various places in order to give much better
      information on what certain error conditions mean.  Closes #98.
    - [test suite] Added the ability to run perl FKO module built-in tests in
      the t/ directory underneath the CPAN Test::Valgrind module.  This allows