@@ -1,3 +1,4 @@
 SOURCE                   ANY
 KEY                      fwknoptest
+HMAC_KEY                 hmactest
 FW_ACCESS_TIMEOUT        3
